# pyctd

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yml
archive/: lib.py  lib_base.py  lib_generate.py  lib_validate.py
archive/0.1/: lib.py
archive/Decimal/: lib.py  main.py  parser.py  tokenizer.py
checktestdata/: __main__.py  lib.py  parser.py  pyctd.py  tokenizer.py
doc/: introduction.md
example/: input_validator.ctd  input_validator.py  test.ctd
src/: __main__.py  parser.py  pyctd.py
test/: checktestdata_tests.sh  grammar_tests.sh
test/diff/: test_precision1_prog  test_precision2_data  test_precision2_prog
test/disabled/: test_int1_prog  test_int2_prog  test_int3_prog
test/grammar/: test_array1_prog  test_array2_prog  test_bool2_prog  test_bool3_prog  test_bool4_prog  test_bool5_prog  test_bool_prog  test_copy1_prog  test_copy2_prog  test_div1_prog  test_div2_prog  test_div3_prog  test_div4_prog  test_encoding1_prog  test_encoding2_prog  test_encoding3_prog  test_eof_prog  test_floatp_prog  test_inarray1_prog  test_inarray2_prog  test_inarray3_prog  test_inarray4_prog  test_index1_prog  test_index2_prog  test_index3_prog  test_index4_prog  test_index5_prog  test_inf_prog  test_minus_prog  test_mod1_prog  test_mod2_prog  test_mod3_prog  test_mod4_prog  test_mod5_prog  test_mul_prog  test_par_prog  test_plus1_prog  test_plus2_prog  test_set1_prog  test_set2_prog  (+10 more)
